Fix last message time at chat item (how it overlaps with title and how "Loading..." stays when no messages)

--- a/main.css
+++ b/main.css
@@ -419,8 +419,9 @@ msgbar > div > textarea {
 	cursor:pointer;
 	white-space:nowrap;
 	text-overflow: ellipsis;
+	overflow: hidden;
 	min-width:0;
-	display:inline;
+	display:block;
 }
 
 .chatitem > infoarea > titlecont > time {
@@ -428,6 +429,7 @@ msgbar > div > textarea {
 	flex-shrink: 0;
 	font-size:9px;
 	cursor:pointer;
+	display: block;
 }
 
 ma {
